# Petronilho-Core-V5

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  arena.hpp  bench_asan  bench_production  bench_production.cpp  bench_throughput  bench_throughput.cpp  bench_tier1_audit  bench_tier1_audit.cpp  bench_tsan  cmake_install.cmake  journal_inspector  main.cpp  net_stress_gen  petronilho_audit.csv  petronilho_audit_5min.csv  petronilho_final  petronilho_reader  petronilho_universal  reader_universal  super_core.hpp  test_network_ingest  test_network_ingest.cpp  test_persistent_ingest
Governance/: Dependency_Protocol.md
bench/: research_suite  research_suite.cpp
core/: CMakeLists.txt
core/platform/: cpu_dispatch.hpp  intrinsics_util.hpp  memory_util.hpp  platform_detect.hpp  timer_util.hpp  vcore_avx2.cpp  vcore_avx512.cpp  vcore_sse4.cpp
core/sys/: arena.hpp  arena_atomic.hpp  arena_thread_local.hpp  handle.hpp  memory.hpp  network_queue.hpp  persistent_arena.hpp  ring_buffer.hpp  sys_core.cpp  sys_core.hpp  telemetry.hpp
docs/: README_WINDOWS.txt  ROADMAP.md
geometric_wing/: CMakeLists.txt  btree_64b.hpp  collision.hpp  hierarchical_cluster_graph.hpp  spatial_node.hpp  tree_24b.hpp
perf/: stress_test_1m.cpp  super_core_final.cpp  test_arena.cpp  test_concurrency.cpp  test_network_ingest.cpp  test_relational.cpp  test_wings.cpp
priority_wing/: CMakeLists.txt  binary_heap.hpp  heap_binary.hpp  scheduler.hpp
relational/: CMakeLists.txt  disjoint_set.hpp  flow_push_relabel.cpp  full_mesh_topology.hpp  graph_packed.hpp  hash_map_soa.hpp  hash_table.hpp
scripts/: audit.sh  governance_check.py  run_test.ps1  run_test.sh
src/: main.cpp  main_universal.cpp  reader.cpp  super_core_universal.hpp  super_core_v5.cpp
super_core_perf/: bench_false_sharing  bench_false_sharing.cpp  bench_multithread  bench_multithread.cpp  bench_perf_counters  bench_perf_counters.cpp  bench_throughput  bench_throughput.cpp
tests/: test_network_ingest.cpp  test_persistent_ingest.cpp
tools/: journal_inspector.cpp  net_stress_gen.cpp
